--- a/configs/router1.iosxr.cfg
+++ b/configs/router1.iosxr.cfg
@@ -3,18 +3,25 @@ hostname rt1
 interface Loopback0
  ipv4 address 1.1.1.1 255.255.255.255
  ipv6 address 3001:1::1/64
+ no shutdown
 !
 interface GigabitEthernet0/0/0/0
+ desc To Router2
+ no ip address
  ipv6 address 3001:12::1/64
-!
-interface GigabitEthernet0/0/0/1
- shutdown
+ no shutdown
 !
 interface GigabitEthernet0/0/0/2
+ desc To Router3
+ no ip address
  ipv6 address 3001:13::1/64
+ no shutdown
 !
 interface GigabitEthernet0/0/0/8
+ desc To Sniffer
+ no ip address
  ipv6 address 3001:1:ca9::1/64
+ no shutdown
 !
 router ospfv3 1
  area 0
@@ -30,11 +37,23 @@ router bgp 65000
  address-family ipv6 unicast
   network 3001:1:ca9::/64
  !
- neighbor 3001:2::2
+ session-group internal-peers
   remote-as 65000
   update-source Loopback0
+ !
+ neighbor-group internal-peers
+  use session-group internal-peers
   address-family ipv6 unicast
   !
+ !
+ neighbor 3001:2::2
+  use neighbor-group internal-peers
+ !
+ neighbor 3001:3::3
+  use neighbor-group internal-peers
+ !
+ neighbor 3001:4::4
+  use neighbor-group internal-peers
  !
 !
 end
