--- a/configs/router2.iosxr.cfg
+++ b/configs/router2.iosxr.cfg
@@ -3,18 +3,25 @@ hostname router2
 interface Loopback0
  ipv4 address 2.2.2.2 255.255.255.255
  ipv6 address 3001:2::2/64
-!
-interface MgmtEth0/RP0/CPU0/0
- ipv4 address 100.96.0.16 255.240.0.0
+ no shutdown
 !
 interface GigabitEthernet0/0/0/0
+ desc To Router1
+ no ip address
  ipv6 address 3001:12::2/64
+ no shutdown
 !
 interface GigabitEthernet0/0/0/1
+ desc To Router4
+ no ip address
  ipv6 address 3001:24::2/64
+ no shutdown
 !
 interface GigabitEthernet0/0/0/8
+ desc To ExaBGP
+ no ip address
  ipv6 address 3001:2:e10a::2/64
+ no shutdown
 !
 route-policy exabgp
   if source in (3001:a:e10a::10) then
@@ -37,19 +44,23 @@ router bgp 65000
  address-family ipv6 unicast
   network 3001:2:e10a::/64
  !
- neighbor 3001:1::1
+ session-group internal-peers
   remote-as 65000
   update-source Loopback0
+ !
+ neighbor-group internal-peers
+  use session-group internal-peers
   address-family ipv6 unicast
   !
  !
- neighbor 3001:2:e10a::10
-  remote-as 65010
-  update-source GigabitEthernet0/0/0/8
-  address-family ipv6 unicast
-   route-policy exabgp in
-   route-policy exabgp out
-  !
+ neighbor 3001:1::1
+  use neighbor-group internal-peers
+ !
+ neighbor 3001:3::3
+  use neighbor-group internal-peers
+ !
+ neighbor 3001:4::4
+  use neighbor-group internal-peers
  !
 !
 end
