Adding IPv4 unicast to BGP sessions & OSPF for IPv4

--- a/configs/router3.junos.cfg
+++ b/configs/router3.junos.cfg
@@ -1,21 +1,30 @@
 set system host-name router3
 set interfaces ge-0/0/0 unit 0 description "To Router1"
+set interfaces ge-0/0/0 unit 0 family inet address 10.13.0.3/24
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:13::3/64
 set interfaces ge-0/0/1 unit 0 description "To Router4"
+set interfaces ge-0/0/1 unit 0 family inet address 10.34.0.3/24
 set interfaces ge-0/0/1 unit 0 family inet6 address 3001:34::3/64
 set interfaces lo0 unit 0 family inet address 3.3.3.3/32
 set interfaces lo0 unit 0 family inet6 address 3001:3::3/64
-#
+set policy-options policy-statement bgp-connected term 1 from route-filter 3.3.3.3/32 exact
+set policy-options policy-statement bgp-connected term 1 then accept
+set routing-instances mgmt_junos description "Management VRF"
+set routing-options router-id 3.3.3.3
+set routing-options autonomous-system 65000
+set protocols bgp family inet unicast
+set protocols bgp family inet6 unicast
 set protocols bgp group internal-peers type internal
-set protocols bgp group internal-peers description “iBGP for AS 65000”
 set protocols bgp group internal-peers local-address 3001:3::3
+set protocols bgp group internal-peers family inet unicast local-ipv4-address 3.3.3.3
+set protocols bgp group internal-peers family inet6 unicast
+set protocols bgp group internal-peers export bgp-connected
 set protocols bgp group internal-peers neighbor 3001:1::1
 set protocols bgp group internal-peers neighbor 3001:2::2
 set protocols bgp group internal-peers neighbor 3001:4::4
-#
+set protocols ospf area 0.0.0.0 interface lo0.0
+set protocols ospf area 0.0.0.0 interface ge-0/0/0.0
+set protocols ospf area 0.0.0.0 interface ge-0/0/1.0
 set protocols ospf3 area 0.0.0.0 interface lo0.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/0.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/1.0
-#
-set routing-options router-id 3.3.3.3
-set routing-options autonomous-system 65000
