--- a/configs/router1.iosxr.cfg
+++ b/configs/router1.iosxr.cfg
@@ -6,22 +6,32 @@ interface Loopback0
  no shutdown
 !
 interface GigabitEthernet0/0/0/0
- desc To Router2
- no ip address
+ description To Router2
+ ip address 10.12.0.1/24
  ipv6 address 3001:12::1/64
  no shutdown
 !
 interface GigabitEthernet0/0/0/2
- desc To Router3
- no ip address
+ description To Router3
+ ip address 10.13.0.1/24
  ipv6 address 3001:13::1/64
  no shutdown
 !
 interface GigabitEthernet0/0/0/8
- desc To Sniffer
+ description To Sniffer
  no ip address
  ipv6 address 3001:1:ca9::1/64
  no shutdown
+!
+router ospf 1
+ area 0
+  interface Loopback0
+  !
+  interface GigabitEthernet0/0/0/0
+  !
+  interface GigabitEthernet0/0/0/2
+  !
+ !
 !
 router ospfv3 1
  area 0
@@ -34,6 +44,9 @@ router ospfv3 1
  !
 !
 router bgp 65000
+ address-family ipv4 unicast
+  network 1.1.1.1/32
+ !
  address-family ipv6 unicast
   network 3001:1:ca9::/64
  !
@@ -43,6 +56,8 @@ router bgp 65000
  !
  neighbor-group internal-peers
   use session-group internal-peers
+  address-family ipv4 unicast
+  !
   address-family ipv6 unicast
   !
  !
