Adding FlowSpec Demo

--- a/exabgp/conf.ini
+++ b/exabgp/conf.ini
@@ -9,11 +9,30 @@ neighbor 3001:2:e10a::2 {
     local-as 65010;
     peer-as 65000;
 
+    family {
+        ipv4 unicast;
+        ipv4 flow;
+        ipv6 unicast;
+        ipv6 flow;
+    }
     announce {
         ipv6 {
             # Test routes to confirm ExaBGP advertisement is working
             unicast 3001:99:a::/64 next-hop self;
             unicast 3001:99:b::/64 next-hop self;
+        }
+    }
+
+    # Static FlowSpec test to confirm ExaBGP advertisement is working
+    flow {
+        route TEST {
+            match {
+                source 3001:99:a::10/128;
+                destination 3001:99:b::10/128;
+            }
+            then {
+                redirect 6:302;
+            }
         }
     }
 }
