Updating configs and README
- Adding more topology images for the intended outcome of the demo
- Adding a second IPv6 address on Host1 to show that other flows are unaffected by the FlowSpec fule

--- a/configs/router1.junos.cfg
+++ b/configs/router1.junos.cfg
@@ -18,7 +18,7 @@ set policy-options policy-statement CONNECTED term 1 from route-filter 1.1.1.1/3
 set policy-options policy-statement CONNECTED term 1 then accept
 set policy-options community TCP-REDIRECT members redirect:6:302
 set routing-instances flowspec-redirect instance-type vrf
-set routing-instances flowspec-redirect interface ge-0/0/8.10
+set routing-instances flowspec-redirect interface lo0.302
 set routing-instances flowspec-redirect route-distinguisher 6:302
 set routing-instances flowspec-redirect vrf-target target:6:302
 set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet.0
