--- a/exabgp/conf.ini
+++ b/exabgp/conf.ini
@@ -24,15 +24,16 @@ neighbor 3001:2:e10a::2 {
     }
 
     # Static FlowSpec test to confirm ExaBGP advertisement is working
-    flow {
-        route TEST {
-            match {
-                source 3001:99:a::10/128;
-                destination 3001:99:b::10/128;
-            }
-            then {
-                redirect 6:302;
-            }
-        }
-    }
+    # Uncomment to add this flow at ExaBGP startup time
+    # flow {
+    #     route TEST {
+    #         match {
+    #             source 3001:99:a::10/128;
+    #             destination 3001:99:b::10/128;
+    #         }
+    #         then {
+    #             redirect 6:302;
+    #         }
+    #     }
+    # }
 }
