Update Sniffer details
- Adding IPv6 retransmit pcap between Host1 and Host2
- Improving retransmit detection script

--- a/configs/router1.junos.cfg
+++ b/configs/router1.junos.cfg
@@ -11,12 +11,13 @@ set interfaces ge-0/0/9 description Sniffer
 set interfaces ge-0/0/9 unit 0 family inet6 address 3001:1:ca9::1/64
 set interfaces lo0 unit 0 family inet address 1.1.1.1/32
 set interfaces lo0 unit 0 family inet6 address 3001:1::1/64
+# Policy to receive and allow FlowSpec to redirect traffic
 set policy-options policy-statement FLOWSPEC term 1 from community TCP-REDIRECT
 set policy-options policy-statement FLOWSPEC term 1 then next-hop peer-address
 set policy-options policy-statement FLOWSPEC term 2 then accept
-set policy-options policy-statement CONNECTED term 1 from route-filter 1.1.1.1/32 exact
-set policy-options policy-statement CONNECTED term 1 then accept
+# Define community used to redirect traffic to Router2
 set policy-options community TCP-REDIRECT members redirect:6:302
+# Start FlowSpec Client Redirect config, Redirect only works with a VRF currently
 set routing-instances flowspec-redirect instance-type vrf
 set routing-instances flowspec-redirect interface lo0.302
 set routing-instances flowspec-redirect route-distinguisher 6:302
@@ -27,27 +28,26 @@ set routing-instances flowspec-redirect routing-options rib flowspec-redirect.in
 set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet6.0 static route ::/0 resolve
 set routing-instances flowspec-redirect routing-options resolution rib flowspec-redirect.inet6.0 resolution-ribs inet6.0
 set routing-options rib inet6.0
+# End FlowSpec Client Redirect config
 set routing-options flow term-order standard
 set routing-options router-id 1.1.1.1
 set routing-options autonomous-system 65000
-set protocols bgp family inet unicast
 set protocols bgp family inet6 unicast
 set protocols bgp group internal-peers type internal
 set protocols bgp group internal-peers local-address 3001:1::1
-set protocols bgp group internal-peers family inet unicast local-ipv4-address 1.1.1.1
 set protocols bgp group internal-peers family inet6 unicast
+# Learn FlowSpec routes from Router2
 set protocols bgp group internal-peers family inet6 flow no-validate FLOWSPEC
-set protocols bgp group internal-peers export CONNECTED
 set protocols bgp group internal-peers neighbor 3001:2::2
 set protocols bgp group internal-peers neighbor 3001:3::3
 set protocols bgp group internal-peers neighbor 3001:4::4
-set protocols bgp group exabgp family inet flow
-set protocols bgp group exabgp family inet6 flow
 set protocols ospf area 0.0.0.0 interface lo0.0
 set protocols ospf area 0.0.0.0 interface ge-0/0/0.0
 set protocols ospf area 0.0.0.0 interface ge-0/0/1.0
+set protocols ospf area 0.0.0.0 interface ge-0/0/8.0 passive
 set protocols ospf area 0.0.0.0 interface ge-0/0/9.0 passive
 set protocols ospf3 area 0.0.0.0 interface lo0.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/0.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/1.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/8.0 passive
+set protocols ospf3 area 0.0.0.0 interface ge-0/0/9.0 passive
