--- a/configs/router2.junos.cfg
+++ b/configs/router2.junos.cfg
@@ -20,23 +20,17 @@ set policy-options policy-statement FLOWSPEC term 2 from community TCP-REDIRECT
 set policy-options policy-statement FLOWSPEC term 2 then local-preference 65000
 set policy-options policy-statement FLOWSPEC term 2 then accept
 set policy-options policy-statement FLOWSPEC term 3 then accept
-# Advertise local loopback into BGP
-set policy-options policy-statement CONNECTED term 1 from route-filter 2.2.2.2/32 exact
-set policy-options policy-statement CONNECTED term 1 then accept
 set policy-options community TCP-REDIRECT members redirect:6:302
 set routing-options flow term-order standard
 set routing-options router-id 2.2.2.2
 set routing-options autonomous-system 65000
 # BGP
-set protocols bgp family inet unicast
 set protocols bgp family inet6 unicast
 # Advertise FlowSpec rules out to edge routers
 set protocols bgp group internal-peers type internal
 set protocols bgp group internal-peers local-address 3001:2::2
-set protocols bgp group internal-peers family inet unicast local-ipv4-address 2.2.2.2
 set protocols bgp group internal-peers family inet6 unicast
 set protocols bgp group internal-peers family inet6 flow
-set protocols bgp group internal-peers export CONNECTED
 set protocols bgp group internal-peers neighbor 3001:1::1
 set protocols bgp group internal-peers neighbor 3001:3::3
 set protocols bgp group internal-peers neighbor 3001:4::4
@@ -49,11 +43,13 @@ set protocols bgp group exabgp family inet6 flow no-validate FLOWSPEC
 set protocols bgp group exabgp peer-as 65010
 set protocols bgp group exabgp neighbor 3001:2:e10a::10 local-address 3001:2:e10a::2
 set protocols ospf area 0.0.0.0 interface lo0.0
+# Prevent being a normal transit hop
 set protocols ospf area 0.0.0.0 interface ge-0/0/0.0 metric 65000
 set protocols ospf area 0.0.0.0 interface ge-0/0/1.0 metric 65000
 set protocols ospf area 0.0.0.0 interface ge-0/0/8.0 passive
 set protocols ospf area 0.0.0.0 interface ge-0/0/9.0 passive
 set protocols ospf3 area 0.0.0.0 interface lo0.0
+# Prevent being a normal transit hop
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/0.0 metric 65000
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/1.0 metric 65000
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/9.0 passive
