--- a/configs/router1.junos.cfg
+++ b/configs/router1.junos.cfg
@@ -1,4 +1,5 @@
 set system host-name router1
+set version 18.4R1.8
 set interfaces ge-0/0/0 description Router2
 set interfaces ge-0/0/0 unit 0 family inet address 10.12.0.1/24
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:12::1/64
