--- a/configs/router2.junos.cfg
+++ b/configs/router2.junos.cfg
@@ -1,4 +1,5 @@
 set system host-name router2
+set version 18.4R1.8
 set interfaces ge-0/0/0 description Router1
 set interfaces ge-0/0/0 unit 0 family inet address 10.12.0.2/24
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:12::2/64
