Revising Basic Demo
- Now using Blacklisted DNS responses as trigger
- Updating guides/configs for this Demo
- Added DNS `pcap` for detect.py

--- a/configs/router1.iosxr.cfg
+++ b/configs/router1.iosxr.cfg
@@ -1,4 +1,5 @@
-hostname rt1
+hostname router1
+!! IOS XR Configuration version = 6.5.3
 !
 interface Loopback0
  ipv4 address 1.1.1.1 255.255.255.255
