--- a/configs/router2.iosxr.cfg
+++ b/configs/router2.iosxr.cfg
@@ -1,4 +1,5 @@
 hostname router2
+!! IOS XR Configuration version = 6.5.3
 !
 interface Loopback0
  ipv4 address 2.2.2.2 255.255.255.255
@@ -23,7 +24,7 @@ interface GigabitEthernet0/0/0/8
  no shutdown
 !
 route-policy exabgp
-  if source in (3001:a:e10a::10) then
+  if source in (3001:2:e10a::10) then
     set local-preference 4294967295
   endif
   pass
@@ -34,8 +35,10 @@ router ospf 1
   interface Loopback0
   !
   interface GigabitEthernet0/0/0/0
+   cost 65000
   !
   interface GigabitEthernet0/0/0/1
+   cost 65000
   !
  !
 !
@@ -44,8 +47,10 @@ router ospfv3 1
   interface Loopback0
   !
   interface GigabitEthernet0/0/0/0
+   cost 65000
   !
   interface GigabitEthernet0/0/0/1
+   cost 65000
   !
  !
 !
@@ -83,10 +88,12 @@ router bgp 65000
   address-family ipv4 unicast
    route-policy exabgp in
    route-policy exabgp out
+   next-hop-self
   !
   address-family ipv6 unicast
    route-policy exabgp in
    route-policy exabgp out
+   next-hop-self
   !
  !
 !
