--- a/configs/router3.junos.cfg
+++ b/configs/router3.junos.cfg
@@ -1,4 +1,5 @@
 set system host-name router3
+set version 18.4R1.8
 set interfaces ge-0/0/0 unit 0 description "To Router1"
 set interfaces ge-0/0/0 unit 0 family inet address 10.13.0.3/24
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:13::3/64
@@ -9,7 +10,6 @@ set interfaces lo0 unit 0 family inet address 3.3.3.3/32
 set interfaces lo0 unit 0 family inet6 address 3001:3::3/64
 set policy-options policy-statement bgp-connected term 1 from route-filter 3.3.3.3/32 exact
 set policy-options policy-statement bgp-connected term 1 then accept
-set routing-instances mgmt_junos description "Management VRF"
 set routing-options router-id 3.3.3.3
 set routing-options autonomous-system 65000
 set protocols bgp family inet unicast
