--- a/configs/router4.junos.cfg
+++ b/configs/router4.junos.cfg
@@ -1,4 +1,5 @@
 set system host-name router4
+set version 18.4R1.8
 set interfaces ge-0/0/0 unit 0 description "To Router2"
 set interfaces ge-0/0/0 unit 0 family inet address 10.24.0.4/24
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:24::4/64
