--- a/exabgp/conf.ini
+++ b/exabgp/conf.ini
@@ -9,6 +9,11 @@ neighbor 3001:2:e10a::2 {
     local-as 65010;
     peer-as 65000;
 
+    family {
+        ipv4 unicast;
+        ipv6 unicast;
+    }
+
     announce {
         ipv6 {
             # Test routes to confirm ExaBGP advertisement is working
