--- a/configs/router1.junos.cfg
+++ b/configs/router1.junos.cfg
@@ -2,20 +2,24 @@ set system host-name router1
 set version 18.4R1.8
 set interfaces ge-0/0/0 description Router2
 set interfaces ge-0/0/0 unit 0 family inet address 10.12.0.1/24
+set interfaces ge-0/0/0 unit 0 family inet filter group 1
+set interfaces ge-0/0/0 unit 0 family inet6 filter group 1
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:12::1/64
 set interfaces ge-0/0/1 description Router3
 set interfaces ge-0/0/1 unit 0 family inet address 10.13.0.1/24
+set interfaces ge-0/0/1 unit 0 family inet filter group 1
+set interfaces ge-0/0/1 unit 0 family inet6 filter group 1
 set interfaces ge-0/0/1 unit 0 family inet6 address 3001:13::1/64
 set interfaces ge-0/0/8 description Host1
 set interfaces ge-0/0/8 unit 0 family inet6 address 3001:1:a::1/64
 set interfaces ge-0/0/9 description Sniffer
 set interfaces ge-0/0/9 unit 0 family inet6 address 3001:1:ca9::1/64
+set interfaces lo0 unit 0 family inet filter group 1
 set interfaces lo0 unit 0 family inet address 1.1.1.1/32
 set interfaces lo0 unit 0 family inet6 address 3001:1::1/64
-# Policy to receive and allow FlowSpec to redirect traffic
-set policy-options policy-statement FLOWSPEC term 1 from community TCP-REDIRECT
-set policy-options policy-statement FLOWSPEC term 1 then next-hop peer-address
-set policy-options policy-statement FLOWSPEC term 2 then accept
+set interfaces lo0 unit 302 family inet filter group 1
+# Policy to receive and allow FlowSpec advertisements to redirect traffic
+set policy-options policy-statement FLOWSPEC term 1 then accept
 # Define community used to redirect traffic to Router2
 set policy-options community TCP-REDIRECT members redirect:6:302
 # Start FlowSpec Client Redirect config, Redirect only works with a VRF currently
@@ -23,16 +27,18 @@ set routing-instances flowspec-redirect instance-type vrf
 set routing-instances flowspec-redirect interface lo0.302
 set routing-instances flowspec-redirect route-distinguisher 6:302
 set routing-instances flowspec-redirect vrf-target target:6:302
-set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet.0
 set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet6.0 static defaults resolve
 set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet6.0 static route ::/0 next-hop 3001:2::2
 set routing-instances flowspec-redirect routing-options rib flowspec-redirect.inet6.0 static route ::/0 resolve
 set routing-instances flowspec-redirect routing-options resolution rib flowspec-redirect.inet6.0 resolution-ribs inet6.0
 set routing-options rib inet6.0
 # End FlowSpec Client Redirect config
-set routing-options flow term-order standard
 set routing-options router-id 1.1.1.1
 set routing-options autonomous-system 65000
+# Exclude core interfaces from flowspec rule
+set routing-options flow interface-group 1
+set routing-options flow interface-group exclude
+set routing-options flow term-order standard
 set protocols bgp family inet6 unicast
 set protocols bgp group internal-peers type internal
 set protocols bgp group internal-peers local-address 3001:1::1
