Adding MPLS/LDP for R1, 2, 3

--- a/configs/router1.junos.cfg
+++ b/configs/router1.junos.cfg
@@ -4,18 +4,24 @@ set interfaces ge-0/0/0 description Router2
 set interfaces ge-0/0/0 unit 0 family inet address 10.12.0.1/24
 set interfaces ge-0/0/0 unit 0 family inet filter group 1
 set interfaces ge-0/0/0 unit 0 family inet6 address 3001:12::1/64
+set interfaces ge-0/0/0 unit 0 family mpls
 set interfaces ge-0/0/1 description Router3
 set interfaces ge-0/0/1 unit 0 family inet address 10.13.0.1/24
 set interfaces ge-0/0/1 unit 0 family inet filter group 1
 set interfaces ge-0/0/1 unit 0 family inet6 address 3001:13::1/64
+set interfaces ge-0/0/1 unit 0 family mpls
 set interfaces ge-0/0/8 description Host1
 set interfaces ge-0/0/8 unit 0 family inet6 address 3001:1:a::1/64
+set interfaces ge-0/0/8 unit 0 family mpls
 set interfaces ge-0/0/9 description Sniffer
 set interfaces ge-0/0/9 unit 0 family inet6 address 3001:1:ca9::1/64
 set interfaces lo0 unit 0 family inet filter group 1
 set interfaces lo0 unit 0 family inet address 1.1.1.1/32
 set interfaces lo0 unit 0 family inet6 address 3001:1::1/64
 set interfaces lo0 unit 302 family inet filter group 1
+# Policy for LDP Label allocation
+set policy-options policy-statement CONNECTED from protocol direct
+set policy-options policy-statement CONNECTED then accept
 # Policy to receive and allow FlowSpec advertisements to redirect traffic
 set policy-options policy-statement FLOWSPEC term 1 then accept
 # Define community used to redirect traffic to Router2
@@ -37,6 +43,15 @@ set routing-options autonomous-system 65000
 set routing-options flow interface-group 1
 set routing-options flow interface-group exclude
 set routing-options flow term-order standard
+# MPLS/LDP Config
+set protocols ldp egress-policy CONNECTED
+set protocols ldp explicit-null
+set protocols ldp transport-address router-id
+set protocols ldp interface ge-0/0/0.0
+set protocols ldp interface ge-0/0/1.0
+set protocols ldp interface ge-0/0/8.0
+set protocols ldp family inet6
+set protocols ldp transport-preference ipv6
 set protocols bgp family inet6 unicast
 set protocols bgp group internal-peers type internal
 set protocols bgp group internal-peers local-address 3001:1::1
@@ -56,3 +71,6 @@ set protocols ospf3 area 0.0.0.0 interface ge-0/0/0.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/1.0
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/8.0 passive
 set protocols ospf3 area 0.0.0.0 interface ge-0/0/9.0 passive
+set protocols mpls interface ge-0/0/0.0
+set protocols mpls interface ge-0/0/1.0
+set protocols mpls interface ge-0/0/8.0
