--- a/configs/router4.iosxr.cfg
+++ b/configs/router4.iosxr.cfg
@@ -82,4 +82,19 @@ router bgp 65000
 flowspec
  local-install interface-all
 !
+mpls ldp
+ address-family ipv6
+  label
+   local
+    advertise
+     explicit-null
+    !
+   !
+  !
+ !
+ interface GigabitEthernet0/0/0/3
+  address-family ipv6
+  !
+ !
+!
 end
