--- a/configs/router3.iosxr.cfg
+++ b/configs/router3.iosxr.cfg
@@ -73,4 +73,25 @@ router bgp 65000
   use neighbor-group internal-peers
  !
 !
+mpls ldp
+ address-family ipv6
+  label
+   local
+    advertise
+     explicit-null
+    !
+   !
+  !
+ !
+ interface GigabitEthernet0/0/0/2
+  address-family ipv6
+   discovery transport-address 3001:13::3
+  !
+ !
+ interface GigabitEthernet0/0/0/3
+  address-family ipv6
+   discovery transport-address 3001:34::3
+  !
+ !
+!
 end
